[gd_scene load_steps=3 format=3 uid="uid://b63t2563g31cm"]

[ext_resource type="Texture2D" uid="uid://dbayh183eynfh" path="res://assets/world1/traffic_light.png" id="1_s6fdf"]
[ext_resource type="Script" path="res://scenes/worlds/world1/traffic_light/traffic_light.gd" id="2_3wbkm"]

[node name="TrafficLight" type="Area2D"]
script = ExtResource("2_3wbkm")
off_color = Color(0.286275, 0.286275, 0.286275, 1)
stop_color = Color(1, 1, 0, 1)
go_color = Color(0, 0, 1, 1)

[node name="Base" type="Sprite2D" parent="."]
position = Vector2(-2, -30)
texture = ExtResource("1_s6fdf")
region_enabled = true
region_rect = Rect2(0, 0, 40, 64)

[node name="Light1" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 0, 1)
position = Vector2(-1, -17)
texture = ExtResource("1_s6fdf")
region_enabled = true
region_rect = Rect2(40, 0, 24, 22)

[node name="Light2" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.286275, 0.286275, 0.286275, 1)
position = Vector2(-1, -43)
texture = ExtResource("1_s6fdf")
region_enabled = true
region_rect = Rect2(40, 0, 24, 22)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
